--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <span class="categoria">Categoria: Épica</span>
           <span class="preco">R$ 3.000,00</span>
           <button class="btn-info">Mais informações</button>
-          <a href="http://wa.me/5511949300469?text=Olá, quero comprar a carta Arkanon!" class="btn-comprar"
+          <a href="http://wa.me/seu-numero?text=Olá, quero comprar a carta Lymara!" class="btn-comprar"
             target="_blank">Comprar</a>
         </div>
       </li>
@@ -60,7 +60,7 @@
           <span class="categoria">Categoria: Épica</span>
           <span class="preco">R$ 4000,00</span>
           <button class="btn-info">Mais informações</button>
-          <a href="http://wa.me/5511949300469?text=Olá, quero comprar a carta Lymara!" class="btn-comprar"
+          <a href="http://wa.me/seu-numero?text=Olá, quero comprar a carta Lymara!" class="btn-comprar"
             target="_blank">Comprar</a>
         </div>
       </li>
@@ -74,7 +74,7 @@
           <span class="categoria">Categoria: Comum</span>
           <span class="preco">R$ 800,00</span>
           <button class="btn-info">Mais informações</button>
-          <a href="http://wa.me/5511949300469?text=Olá, quero comprar a carta Kaelthar!" class="btn-comprar"
+          <a href="http://wa.me/seu-numero?text=Olá, quero comprar a carta Lymara!" class="btn-comprar"
             target="_blank">Comprar</a>
         </div>
       </li>
@@ -86,7 +86,7 @@
           <span class="categoria">Categoria: Rara</span>
           <span class="preco">R$ 1500,00</span>
           <button class="btn-info">Mais informações</button>
-          <a href="http://wa.me/5511949300469?text=Olá, quero comprar a carta Maldrik!" class="btn-comprar"
+          <a href="http://wa.me/seu-numero?text=Olá, quero comprar a carta Lymara!" class="btn-comprar"
             target="_blank">Comprar</a>
         </div>
       </li>
@@ -98,7 +98,7 @@
           <span class="categoria">Categoria: Comum</span>
           <span class="preco">R$ 600,00</span>
           <button class="btn-info">Mais informações</button>
-          <a href="http://wa.me/5511949300469?text=Olá, quero comprar a carta Drahven!" class="btn-comprar"
+         <a href="http://wa.me/seu-numero?text=Olá, quero comprar a carta Lymara!" class="btn-comprar"
             target="_blank">Comprar</a>
         </div>
       </li>
@@ -112,7 +112,7 @@
           <span class="categoria">Categoria: Comum</span>
           <span class="preco">R$ 400,00</span>
           <button class="btn-info">Mais informações</button>
-          <a href="http://wa.me/5511949300469?text=Olá, quero comprar a carta Nyxsombra!" class="btn-comprar"
+          <a href="http://wa.me/seu-numero?text=Olá, quero comprar a carta Lymara!" class="btn-comprar"
             target="_blank">Comprar</a>
         </div>
       </li>
@@ -129,5 +129,6 @@
   <footer class="rodape">@2025 - Todos os direitos reservados</footer>
   <script src="./src/js/index.js"></script>
 </body>
+
 
 </html>
